--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.2.5
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
